# AykAI

./: .env.example  .gitignore  README.md  Readme.md  docker-compose.yml  main.py  pyproject.toml
.agents/skills/testing-frontend/: SKILL.md
AIserver/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
AIserver/.cache/: bm25_docs.json
AIserver/.postman/: resources.yaml
AIserver/api/: main.py  security.py
AIserver/api/routes/: health.py  (+2 more)
AIserver/config/: settings.py
AIserver/logs/: ingest_repair_queue.jsonl
AIserver/scripts/: init_milvus.py
AIserver/tests/: conftest.py  test_api_smoke.py
Summary/: Readme.md
api/: dependencies.py
api/routes/: health.py  ingest.py  query.py
backend/: Dockerfile  go.mod  go.sum  main.go
backend/config/: config.go  config.toml
backend/controller/: common.go
backend/model/: message.go
backend/router/: ai.go  router.go  user.go
backend/utils/: utils.go
config/: settings.py
docker/postgres/: init-multi-db.sql
docs/: 1.chunk.md  2.embedding.md
docs/.obsidian/: workspace.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
postman/environments/: New Environment.environment.yaml
scripts/: init_milvus.py
src/aykai.egg-info/: top_level.txt
src/data/: chunking.py
src/indexing/: ingest_graph.py  parent_child_builder.py
src/persistence/: elasticsearch_client.py  metadata_store.py  milvus_client.py  parent_store.py
src/retrieval/: bm25_retriever.py  fusion.py  query_graph.py  vector_retriever.py
(+48 files in other folders)
