[project]
name = "aykai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.38.0",
    "langchain-core>=1.2.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.1.0",
    "rank-bm25>=0.2.2",
    "pymilvus>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]
